# libgeodesk

./: CMakeLists.txt  NOTICE  README.md
benchmark/: benchmark_main.cpp
doc/: Doxyfile
doc/releases/: v1.0.0.md  v1.1.0.md  v2.0.0.md  v2.1.0.md  v2.2.0.md
examples/bus-routes/: CMakeLists.txt  main.cpp
examples/perf-test/: CMakeLists.txt  main.cpp
examples/query-id/: CMakeLists.txt  main.cpp
examples/tag_stats/: main.cpp
include/clarisma/alloc/: Arena.h  ArenaBag.h  Block.h  ChunkChain.h
include/clarisma/cli/: CliApplication.h  CliCommandConfigurator.h  CliHelp.h  Console.h  ConsoleBuffer.h  ConsoleWriter.h  VerbosityLevel.h
include/clarisma/data/: BTreeSet.h  Chunk.h  HashMap.h  HashSet.h  LinkedStack.h  ShortVarStringMap.h  SmallArray.h  SmallVector.h
include/clarisma/io/: AtomicFile.h  ExpandableMappedFile.h  File.h  FileBuffer2.h  FileBuffer3.h  FileError.h  FileHandle.h  FileLock.h  FilePath.h  FileSystem.h  FileTime.h  FileWriter.h  IOException.h  MappedFile.h  MemoryMapping.h
include/clarisma/libero/: FreeStore.h  FreeStore_Journal.h  FreeStore_Transaction.h
include/clarisma/math/: Decimal.h  Math.h
include/clarisma/net/: UrlScheme.h  UrlView.cpp  UrlView.h
include/clarisma/store/: BTree.h  BTreeData.h  BTree_old.h  BlobPtr.h  BlobStore.h  BlobStore2.h  BlobStoreTree.h  IndexFile.h  IndexFile_old.h  KeyTree.h  PileFile.h  Store.h
include/clarisma/sys/: AppDirectories.h  SystemInfo.h
include/clarisma/text/: Csv.h  Format.h  Parsing.h  Table.cpp  Table.h  Template.h  TextMetrics.h  TextTemplate.h
include/clarisma/thread/: BlockingQueue.h  BlockingQueue_alt.h  TaskEngine.h  TaskQueue.h  ThreadPool.h  Threads.h
include/clarisma/util/: Buffer.h  BufferWriter.h  ChunkBuffer.h  Crc32.h  Crc32C.h  DataPtr.h  DateTime.h  DynamicStackBuffer.h  FileSize.h  FileVersion.h  Hash.h  HashedStringView.h  Json.h  Parcel.h  Parser.h  PbfDecoder.h  Pointers.h  PropertiesParser.h  SemanticVersion.h  ShortVarString.h  SimpleXmlParser.h  StreamWriter.h  StringBuilder.h  StringViewBuffer.h  Strings.h  TritStreamReader.h  UUID.h  Unicode.h  Xml.h  enum.h  log.h  streamable.h  varint.h  varint_safe.h
include/clarisma/validate/: BinaryChecker.h  Checker.h  FileSizeParser.h  Manifest.h  Validate.h
include/geodesk/: version.h
include/geodesk/api/: Feature.h  Features.h
include/geodesk/feature/: AbstractFeatureTableIterator.h  AbstractTagIterator.h  AreaMemberIterator.h  ExportTablePtr.h  FastMemberIterator.h  FeatureBase.h  FeatureBase_impl.h  FeatureHeader.h  FeatureIteratorBase.h  FeatureNodeIterator.h  FeaturePtr.h  FeatureStore.h  FeatureStore2.h  FeatureStore2_Transaction.h  FeatureStore_Transaction.h  FeaturesBase.h  ForeignFeatureRef.h  GlobalStrings.h  GlobalTagIterator.h  IdIndex.h  Key.h  LocalTagIterator.h  MemberCollection.h  MemberIterator.h  MemberTableIterator.h  NodePtr.h  NodeTableIterator.h  ParentRelationIterator.h  RelatedIterator.h  RelationPtr.h  RelationTableIterator.h  RelationTablePtr.h  ReverseTileIndex.h  StringTable.h  StringValue.h  Tag.h  TagTablePtr.h  TagUtils.h  TagValue.h  TagValues.h  (+16 more)
include/geodesk/filter/: ComboFilter.h  ConnectedFilter.h  ContainsPointFilter.h  Filter.h  Filters.h  PreparedFilterFactory.h  RoleFilter.h  SpatialFilter.h
include/geodesk/format/: CoordinateFormat.h  CsvWriter.h  FeatureFormatter.h  FeatureRow.h  FeatureWriter.h  FilteredTagWalker.h  GeoJsonFormatter.h  GeoJsonWriter.h  GeometryWriter.h  KeySchema.h  LeafletFormatter.h  LeafletSettings.h  MapWriter.h  StringHolder.h  WktFormatter.h  WktWriter.h
include/geodesk/geom/: Area.h  Box.h  Centroid.h  Coordinate.h  CoordinateSpanIterator.h  Distance.h  FixedLonLat.h  Length.h  LengthUnit.h  LineSegment.h  LonLat.h  Mercator.h  OgrGeometryBuilder.h  SpatialUnit.h  Tile.h  TilePair.h
include/geodesk/match/: Matcher.h  MatcherCompiler.h
include/geodesk/query/: FeatureBatch.h  Query.h  QueryBase.h  QueryResults.h  SimpleQuery.h  SimpleQueryBase.h  TileIndexWalker.h  TileQueryTask.h
src/clarisma/alloc/: Arena.cpp
src/clarisma/cli/: CliApplication.cpp  CliCommand.cpp  CliCommandConfigurator.cpp  CliHelp.cpp  Console.cpp  ConsoleBuffer.cpp  ConsoleWriter.cpp  Console_linux.cxx  Console_windows.cxx
src/clarisma/io/: ExpandableMappedFile.cpp  File.cpp  FileHandle.cpp  FileHandle_posix.cxx  FileHandle_win.cxx  FileLock.cpp  FileLock_linux.cxx  FileLock_windows.cxx  FilePath.cpp  FileSystem_linux.cxx  FileSystem_windows.cxx  FileTime.cpp  File_linux.cxx  File_windows.cxx  IOException.cpp  MappedFile_linux.cxx  MappedFile_windows.cxx
src/clarisma/libero/: FreeStore.cpp  FreeStore_Journal.cpp  FreeStore_Transaction.cpp
src/clarisma/store/: BlobStore.cpp  BlobStore2.cpp  BlobStoreTree.cpp  BlobStoreTree.cxx  BlobStoreTree.h  IndexFile.cpp  (+4 more)
src/feature/: FastMemberIterator.cpp  FeatureIteratorBase.cpp  FeatureNodeIterator.cpp  FeaturePtr.cpp  FeatureStore.cpp  FeatureStore2.cpp  FeatureStore2_Transaction.cpp  FeatureStore_Transaction.cpp  IdIndex.cpp  MemberIterator.cpp  ParentRelationIterator.cpp  ReverseTileIndex.cpp  StringTable.cpp  TagIterator.cpp  TagTablePtr.cpp  TagValue.cpp  WayCoordinateIterator.cpp  ZoomLevels.cpp
src/filter/: ComboFilter.cpp  ContainsPointFilter.cpp  FeatureNodeFilter.cpp  Filters.cpp  IntersectsFilter.cpp  PointDistanceFilter.cpp  PreparedFilterFactory.cpp  RoleFilter.cpp
src/format/: CoordinateFormat.cpp  CsvWriter.cpp  FeatureRow.cpp  FeatureWriter.cpp  GeoJsonWriter.cpp  GeometryWriter.cpp  KeySchema.cpp  LeafletFormatter.cpp  MapWriter.cpp  WktWriter.cpp
src/geom/: Centroid.cpp  Distance.cpp  GeometryBuilder.cpp  OgrGeometryBuilder.cpp  SpatialUnit.cpp  SpatialUnit_attr.cxx  SpatialUnit_attr.txt  SpatialUnit_lookup.cxx  Tile.cpp
src/match/: Matcher.cpp  MatcherCompiler.cpp  MatcherDecoder.cpp  MatcherDecoder.h  MatcherEngine.cpp  MatcherValidator.cpp  MatcherValidator.h  OpGraph.h
src/query/: Query.cpp  TileIndexWalker.cpp  TileQueryTask.cpp
test/: Features_test.cpp  test_concur.cpp  tests.h
test/geom/: Geos_test.cpp  LineSegment_test.cpp  PointInPolygon_test.cpp
test/match/: MatcherCompiler_test.cpp
(+62 files in other folders)
